// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatButton should render 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#BA8748",
      "borderColor": "rgb(255, 255, 255)",
      "borderRadius": 10,
      "elevation": 2,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "flex": 1,
        "textAlign": "center",
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`FlatButton should render an icon 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#BA8748",
      "borderColor": "rgb(255, 255, 255)",
      "borderRadius": 10,
      "elevation": 2,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 22,
        },
        {
          "marginRight": 4,
        },
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "flex": 1,
        "textAlign": "center",
      }
    }
  >
    test
  </Text>
</View>
`;
